2010-09-23  Jan Nijtmans  <nijtmans@users.sf.net>

	* unix/tclAppInit.c:  Make compilable with -DUNICODE (not
	* win/tclAppInit.c:   actived yet), many clean-ups in comments.

2010-09-22  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclExecute: one more DECACHE_STACK_INFO() missing; this
	fixes [Bug 3072640]

	* tests/execute.test: added execute-10.3 for [Bug 3072640]. The
	test causes a mem failure.

	* generic/tclExecute: protect all possible writes to ::errorInfo
	or ::errorCode with DECACHE_STACK_INFO(), as they could run
	traces. The new calls to be protected are Tcl_ResetResult(),
	Tcl_SetErrorCode(), IllegalExprOperandType(),
	TclExprFloatError(). The error was triggered by [Patch 3072080].

2010-09-22  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tcl.m4:         Add kernel32 to LIBS, so the link line for mingw
	* win/configure:      is exactly the same as for MSVC++.

2010-09-21  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclExecute.c (TclExecuteByteCode):
	* generic/tclOOMethod.c (ProcedureMethodCompiledVarConnect):
	* generic/tclVar.c (TclLookupSimpleVar, CompareVarKeys):
	* generic/tclPathObj.c (Tcl_FSGetNormalizedPath, Tcl_FSEqualPaths):
	* generic/tclIOUtil.c (TclFSCwdPointerEquals): peephole opt
	* generic/tclResult.c (TclMergeReturnOptions): use memcmp where
	applicable as possible speedup on some libc variants.

2010-09-21  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tclWinFile.c:   Fix declaration after statement.
	* win/tcl.m4:         Add -Wdeclaration-after-statement, so
	* win/configure:      this mistake cannot happen again.
	* win/tclWinFCmd.c:   [Bug 3069278]: Breakage on head Windows triggered
	* win/tclWinPipe.c:   by install-tzdata, final fix

2010-09-20  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tclWinFCmd.c: Eliminate tclWinProcs->useWide everywhere, since
	* win/tclWinFile.c: the value is always "1" on platforms >win95
	* win/tclWinPipe.c:

2010-09-19  Donal K. Fellows  <dkf@users.sf.net>
